--- a/app/common/css/Nav.css
+++ b/app/common/css/Nav.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #294F93;
+  background-color: #005E78;
 }
 
 .navTitle {
